--- a/.github/workflows/copybara.yml
+++ b/.github/workflows/copybara.yml
@@ -18,4 +18,4 @@ jobs:
         run: docker pull sharelatex/copybara
 
       - name: Run Copybara
-        run: docker run -v ~/.ssh:/root/.ssh -v "$(pwd)":/usr/src/app -it sharelatex/copybara copybara
+        run: docker run -v ~/.ssh:/root/.ssh -v "$(pwd)":/usr/src/app -i sharelatex/copybara copybara
